# data-science-lectures

llm_in_prod/: README.md  pyproject.toml  vllm_dev.ipynb
llm_lora/: README.md  backpropagation_dev.ipynb  lora_dev.ipynb  lora_w_unsloth.ipynb  pyproject.toml
llm_lora/utils/: generate_unasnwearable_dataset.py  gpt2.py  lm.py  prompts.py
llm_train/: README.md
lm_audio/: README.md
