[project]
name = "lora-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphviz>=0.21",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "openai>=2.7.1",
    "pynvml>=13.0.1",
    "ruff>=0.14.5",
    "tiktoken>=0.12.0",
    "torchviz>=0.0.3",
    "unsloth>=2025.11.1",
]
